--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document title one</title>
 </head>
 <body>
-    <h2>Welcome to fullstack course</h2>
+    <h2>Welcome to our fullstack course</h2>
+    <h3>new heading</h3>
 </body>
 </html>
